finish populating project data

--- a/src/Home/projectData.json
+++ b/src/Home/projectData.json
@@ -1,7 +1,7 @@
 [
   {
     "isImg": true,
-    "img": "/assets/ProfilePicture.jpg",
+    "img": "/assets/ChineseChess.jpg",
     "title": "Chinese Chess",
     "desc": "Developed an interactive Chinese Chess (also known as Xiangqi) web application. Currently, users are only able to play offline and support for online play is in the works",
     "tech": ["React", "Vite", "TypeScript"],
@@ -9,7 +9,7 @@
   },
   {
     "isImg": true,
-    "img": "/assets/ProfilePicture.jpg",
+    "img": "/assets/Tenzies.jpg",
     "title": "Tenzies",
     "desc": "Developed a simple Tenzies game. Embarked on this project to familiarise myself with front-end development",
     "tech": ["React", "Vite", "TypeScript"],
