--- a/src/Home/projectData.json
+++ b/src/Home/projectData.json
@@ -20,7 +20,7 @@
     "img": "/assets/telegramchatbot.jpeg",
     "title": "Anonymous telegram chat bot",
     "desc": "Developed a telegram bot that matches user randomly and anonymously in the safety of telegram. Learnt back-end development as well as certain aspects of dev-ops ",
-    "tech": ["Python", "Docker", "Heroku", "PostGres"],
+    "tech": ["Python", "Docker", "Heroku", "PostGreSQL"],
     "link": "https://t.me/PolyJcChatBot"
   }
 ]
