--- a/src/Home/projectData.json
+++ b/src/Home/projectData.json
@@ -17,7 +17,7 @@
   },
   {
     "isImg": true,
-    "img": "/assets/telegramchatbot.jpeg",
+    "img": "/assets/telegramchatbot.webp",
     "title": "Anonymous telegram chat bot",
     "desc": "Developed a telegram bot that matches user randomly and anonymously in the safety of telegram. Learnt back-end development as well as certain aspects of dev-ops ",
     "tech": ["Python", "Docker", "Heroku", "PostGreSQL"],
