added tenzies to collection

--- a/src/Home/projectData.json
+++ b/src/Home/projectData.json
@@ -13,7 +13,7 @@
     "title": "Tenzies",
     "desc": "Developed a simple Tenzies game. Embarked on this project to familiarise myself with front-end development",
     "tech": ["React", "Vite", "TypeScript"],
-    "link": "https://github.com/mingyuanc/Tenzies"
+    "link": "https://mingyuanc.github.io/Tenzies"
   },
   {
     "isImg": true,
