--- a/src/Data/projectData.json
+++ b/src/Data/projectData.json
@@ -1,30 +1,6 @@
 [
   {
     "isImg": true,
-    "img": "/assets/projects/golang.webp",
-    "title": "Student management portal backend",
-    "desc": "Implemented backend for a simple student management portal for teachers.",
-    "tech": ["Go", "Gin", "Gorm", "PostGreSQL", "Docker"],
-    "link": "https://nodeflair-technical.vercel.app/"
-  },
-  {
-    "isImg": false,
-    "img": "/assets/projects/NodeFlair.mp4",
-    "title": "Clone of NodeFlair's jobs page",
-    "desc": "Designed a clone of NodeFlair to showcase my frontend skills.",
-    "tech": ["React", "Tailwind", "NextJS", "shadcn/ui"],
-    "link": "https://nodeflair-technical.vercel.app/"
-  },
-  {
-    "isImg": true,
-    "img": "/assets/projects/quack.webp",
-    "title": "Todo list manager",
-    "desc": "Designed a fully functional tasklist manager in java that has a fully functioning GUI and reminders features among many others.",
-    "tech": ["Java", "JavaFX", "GitHub"],
-    "link": "https://github.com/mingyuanc/ip"
-  },
-  {
-    "isImg": true,
     "img": "/assets/projects/Webpage.webp",
     "title": "Personal Webpage",
     "desc": "Developed a personal webpage to store and showcase my experiences and projects that I am proud of!",
@@ -40,19 +16,43 @@
     "link": "https://mingyuanc.github.io/XiangQi/"
   },
   {
-    "isImg": false,
-    "img": "/assets/projects/Tenzies.mp4",
-    "title": "Tenzies",
-    "desc": "Developed a simple Tenzies game. Embarked on this project to familiarise myself with front-end development",
-    "tech": ["React", "Vite", "TypeScript"],
-    "link": "https://mingyuanc.github.io/Tenzies"
-  },
-  {
     "isImg": true,
     "img": "/assets/projects/TelegramBot.webp",
     "title": "Anonymous telegram chat bot",
     "desc": "Developed a telegram bot that matches user randomly and anonymously in the safety of telegram. Learnt back-end development as well as certain aspects of dev-ops ",
     "tech": ["Python", "Docker", "Heroku", "PostGreSQL"],
     "link": "https://t.me/PolyJcChatBot"
+  },
+  {
+    "isImg": true,
+    "img": "/assets/projects/golang.webp",
+    "title": "Student management portal backend",
+    "desc": "Implemented backend logic required for a student management portal.",
+    "tech": ["Go", "Gin", "GORM", "PostGreSQL", "Docker"],
+    "link": "https://github.com/mingyuanc/GovTech-Technical"
+  },
+  {
+    "isImg": false,
+    "img": "/assets/projects/NodeFlair.mp4",
+    "title": "NodeFlair's jobs page clone",
+    "desc": "Designed a clone of NodeFlair to showcase my frontend skills.",
+    "tech": ["React", "Tailwind", "NextJS", "shadcn/ui"],
+    "link": "https://nodeflair-technical.vercel.app/"
+  },
+  {
+    "isImg": true,
+    "img": "/assets/projects/quack.webp",
+    "title": "Todo list manager",
+    "desc": "Designed a fully functional tasklist manager in java that has a fully functioning GUI and reminders features among many others.",
+    "tech": ["Java", "JavaFX", "GitHub"],
+    "link": "https://github.com/mingyuanc/ip"
+  },
+  {
+    "isImg": false,
+    "img": "/assets/projects/Tenzies.mp4",
+    "title": "Tenzies",
+    "desc": "Developed a simple Tenzies game. Embarked on this project to familiarise myself with front-end development",
+    "tech": ["React", "Vite", "TypeScript"],
+    "link": "https://mingyuanc.github.io/Tenzies"
   }
 ]
